Add tm getter endpoints.
